--- a/index.html
+++ b/index.html
@@ -13,9 +13,17 @@
     <div></div>
     <div></div>
     <div></div>
+  </div>
+
+  <div class="col col4 inner">
     <div></div>
     <div></div>
     <div></div>
+    <div></div>
+    <div></div>
+  </div>
+
+  <div class="col col2 inner">
     <div></div>
     <div></div>
     <div></div>
