[fix] ratatouille linh

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Jauge css js</title>
-  <link rel="stylesheet" href="../ratatouille.css">
+  <link rel="stylesheet" href="ratatouille.css">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
