--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
   <meta charset="utf-8">
-  <title>Jauge css js</title>
+  <title>Ratatouille | Mini framework</title>
   <link rel="stylesheet" href="ratatouille.css">
   <link rel="stylesheet" href="style.css">
 </head>
