--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
     <h4>Titre h4</h4>
     <h5>Titre h5</h5>
     <h6>Titre h6</h6>
-    <h2>Colonnes</h2>
-
+    
     <h3>Formulaire</h3>
     <form>
       <fieldset>
@@ -34,7 +33,21 @@
       </fieldset>
     </form>
 
-    <h3>3 Collones</h3>
+    <h2>Colonnes</h2>
+
+    <h3>Sidebar left</h3>
+    <div class="col colSidebarLeft">
+      <div></div>
+      <div></div>
+    </div>
+
+    <h3>Sidebar right</h3>
+    <div class="col colSidebarRight">
+      <div></div>
+      <div></div>
+    </div>
+
+    <h3>3 Colonnes</h3>
     <div class="col col3">
       <div></div>
       <div></div>
@@ -43,7 +56,7 @@
       <div></div>
     </div>
 
-    <h3>4 Collones</h3>
+    <h3>4 Colonnes</h3>
     <div class="col col4">
       <div></div>
       <div></div>
@@ -52,7 +65,7 @@
       <div></div>
     </div>
 
-    <h3>2 Collones</h3>
+    <h3>2 Colonnes</h3>
     <div class="col col2">
       <div></div>
       <div></div>
