--- a/index.html
+++ b/index.html
@@ -33,6 +33,29 @@
       </fieldset>
     </form>
 
+    <h3>Tableaux</h3>
+    <table border="1">
+      <thead>
+        <tr>
+          <th>Th</th>
+          <th>Th</th>
+          <th>Th</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>Td</td>
+          <td>Td</td>
+          <td>Td</td>
+        </tr>
+        <tr>
+          <td>Td</td>
+          <td>Td</td>
+          <td>Td</td>
+        </tr>
+      </tbody>
+    </table>
+
     <h2>Colonnes</h2>
 
     <h3>Sidebar left</h3>
