--- a/index.html
+++ b/index.html
@@ -23,13 +23,16 @@
     <h3>Formulaire</h3>
     <form>
       <fieldset>
-          <legend>Legend</legend>
+          <legend>Input Text</legend>
           <label>Label</label>
           <input type="text"/>
-          <label>Label</label>
-          <input type="email"/>
-          <textarea></textarea>
-          <input type="url"/>
+      </fieldset>
+      <fieldset>
+          <legend>Bouton radio et checkbox</legend>
+          <label for="radio">Radio</label>
+          <input id="radio" type="radio"/><br/>
+          <label for="checkbox">Checkbox</label>
+          <input id="checkbox" type="checkbox"/>
       </fieldset>
     </form>
 
